[gd_scene load_steps=20 format=3 uid="uid://bk4s3a5h2kay"]

[ext_resource type="Texture2D" uid="uid://xp5vbfvt4pjc" path="res://assets/images/seesaw/background.png" id="1_6mvlc"]
[ext_resource type="Script" path="res://scenes/seesaw/seesaw_game.gd" id="1_8gsos"]
[ext_resource type="PackedScene" uid="uid://7jjwno3po0ls" path="res://scenes/snowflake_gen.tscn" id="2_bgd66"]
[ext_resource type="PackedScene" uid="uid://dut31tfe4lqd4" path="res://scenes/seesaw/player.tscn" id="2_nwixa"]
[ext_resource type="Texture2D" uid="uid://cvyubxrpgyofn" path="res://assets/images/seesaw/objects.png" id="3_hdobq"]
[ext_resource type="AudioStream" uid="uid://b5riio4pxel43" path="res://assets/music/seesaw.ogg" id="6_17nd4"]
[ext_resource type="AudioStream" uid="uid://gcokuud1vni0" path="res://assets/sfx/crash.wav" id="6_tmnqs"]
[ext_resource type="AudioStream" uid="uid://bdn4jy2yp7abp" path="res://assets/music/fish.ogg" id="7_ytu4q"]
[ext_resource type="AudioStream" uid="uid://co0va0ufyw3be" path="res://assets/sfx/fail.wav" id="9_6m8pj"]
[ext_resource type="Theme" uid="uid://b6spl8q4o8g5t" path="res://assets/comic.tres" id="9_jrfjl"]
[ext_resource type="PackedScene" uid="uid://c81k420eruqhu" path="res://scenes/ui/score_text.tscn" id="11_l8ret"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtqic"]
size = Vector2(12, 268)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2pbp"]
size = Vector2(12, 268)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwp7r"]
size = Vector2(304, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hglwh"]
size = Vector2(12, 15)

[sub_resource type="Animation" id="Animation_743h4"]
resource_name = "blink"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hootd"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uw1q4"]
_data = {
"blink": SubResource("Animation_743h4"),
"idle": SubResource("Animation_hootd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu51s"]
size = Vector2(304, 9)

[node name="SeesawGame" type="Node2D"]
script = ExtResource("1_8gsos")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
offset_right = 256.0
offset_bottom = 240.0
color = Color(0.996078, 0.172549, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
z_index = -2
offset_right = 256.0
offset_bottom = 240.0
color = Color(0.378906, 0.0976563, 0.996094, 1)

[node name="Snowflakes" parent="." instance=ExtResource("2_bgd66")]

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 256.0
offset_bottom = 240.0
texture = ExtResource("1_6mvlc")

[node name="Seesaw" parent="." instance=ExtResource("2_nwixa")]
position = Vector2(127, 208)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-30, 106)
shape = SubResource("RectangleShape2D_vtqic")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(286, 106)
shape = SubResource("RectangleShape2D_o2pbp")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(128, 232.5)
shape = SubResource("RectangleShape2D_gwp7r")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(128, -19.5)
shape = SubResource("RectangleShape2D_gwp7r")

[node name="Star" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Sprite2D" type="Sprite2D" parent="Star"]
texture_filter = 1
position = Vector2(121, 25)
texture = ExtResource("3_hdobq")
hframes = 3
vframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Star"]
position = Vector2(121, 27.5)
shape = SubResource("RectangleShape2D_hglwh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Star"]
libraries = {
"": SubResource("AnimationLibrary_uw1q4")
}

[node name="Collected" type="AudioStreamPlayer2D" parent="Star"]
process_mode = 3
stream = ExtResource("6_tmnqs")

[node name="KillPlane" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane"]
position = Vector2(128, 220.5)
shape = SubResource("RectangleShape2D_wu51s")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_17nd4")
autoplay = true
bus = &"Music"

[node name="Hurry" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("7_ytu4q")
bus = &"Music"

[node name="Fail" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_6m8pj")

[node name="Objects" type="Node" parent="."]

[node name="ObjectPlace" type="Node2D" parent="Objects"]
position = Vector2(72, 131)

[node name="ObjectPlace2" type="Node2D" parent="Objects"]
position = Vector2(150, 101)

[node name="ObjectPlace3" type="Node2D" parent="Objects"]
position = Vector2(82, 80)

[node name="ObjectPlace4" type="Node2D" parent="Objects"]
position = Vector2(121, 64)

[node name="ObjectPlace5" type="Node2D" parent="Objects"]
position = Vector2(119, 113)

[node name="ObjectPlace6" type="Node2D" parent="Objects"]
position = Vector2(165, 127)

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="StarTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Label" type="Label" parent="StarTimer"]
visible = false
offset_left = 205.0
offset_top = 6.0
offset_right = 245.0
offset_bottom = 29.0
theme = ExtResource("9_jrfjl")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 16
text = "0:00"

[node name="Score" parent="." instance=ExtResource("11_l8ret")]
position = Vector2(11, 12)

[node name="EndTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="Star" to="." method="_on_star_body_entered"]
[connection signal="body_entered" from="KillPlane" to="." method="_on_kill_plane_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="StarTimer" to="." method="_on_star_timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
